# unicornio-dev

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  render.yaml
.github/workflows/: deploy.yml  tests.yml
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml  pytest.ini
backend/app/: config.py  database.py  dependencies.py  main.py  prompts.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  ai.py  ai_v2.py  auth.py  health.py  projects.py  queries.py
backend/app/schemas/: __init__.py  auth.py  requests.py  responses.py  v2.py
backend/app/services/: __init__.py  analyze.py  auth.py  claude.py  context.py  queries.py
backend/benchmarks/: run.py
backend/cli/: api_client.py  config.py  context.py  main.py
backend/requirements/: base.txt  dev.txt
backend/tests/: conftest.py  test_ai_endpoints.py  test_auth.py  test_cli.py  test_context.py  test_health.py  test_platform.py  test_v2.py
backend/unicornio_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: API.md
extension/: README.md  package-lock.json  package.json
extension/src/: auth.ts  extension.ts
extension/src/api/: client.ts
extension/src/commands/: runner.ts
extension/src/panel/: Provider.ts  html.ts
extension/src/utils/: language.ts
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx  AuthScreen.jsx  HistoryPanel.jsx  api.js  index.css  index.js
