[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unicornio-dev"
version = "1.2.0"
description = "Asistente de desarrollo con IA — API y CLI"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "slowapi==0.1.9",
    "typer==0.15.1",
    "rich==13.9.4",
    "sqlalchemy[asyncio]==2.0.36",
    "aiosqlite==0.20.0",
    "asyncpg==0.30.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    "email-validator==2.2.0",
]

[project.scripts]
unicornio = "cli.main:app"

[tool.setuptools.packages.find]
include = ["app*", "cli*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
